--- a/index.html
+++ b/index.html
@@ -57,6 +57,9 @@
                     <option value="polar">Polar</option>
                 </select>
                 <p class="option-description">Select the climate zone of your reforestation area.</p>
+                <label for="elevation">Elevation (meters):</label>
+                <input type="number" id="elevation" min="0" step="1" value="0">
+                <p class="option-description">Enter the average elevation of your reforestation area in meters above sea level.</p>
             </div>
         </div>
     </div>
