ROT: Add optimal rainfall

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
                 <label for="elevation">Elevation (meters):</label>
                 <input type="number" id="elevation" min="0" step="1" value="0">
                 <p class="option-description">Enter the average elevation of your reforestation area in meters above sea level.</p>
+                <label for="annual-rainfall">Annual Rainfall (mm):</label>
+                <input type="number" id="annual-rainfall" min="0" step="1" value="1000">
+                <p class="option-description">Enter the average annual rainfall of your reforestation area in millimeters.</p>
             </div>
         </div>
     </div>
