--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
 
     <div id="advanced-options" style="display: none;">
         <h3>Advanced Options</h3>
-        
+        <div class="advanced-option">
+            <label for="solver">Optimization Solver:</label>
+            <select id="solver" name="solver">
+                <option value="SLSQP">SLSQP</option>
+                <option value="COBYLA">COBYLA</option>
+            </select>
+        </div>
         <div class="option-category">
             <h4 class="category-toggle">Optimization Parameters</h4>
             <div class="category-content" style="display: none;">
@@ -40,30 +46,48 @@
         <div class="option-category">
             <h4 class="category-toggle">Environmental Factors</h4>
             <div class="category-content" style="display: none;">
-                <label for="soil-quality">Soil Quality:</label>
-                <select id="soil-quality">
-                    <option value="poor">Poor</option>
-                    <option value="medium" selected>Medium</option>
-                    <option value="good">Good</option>
-                </select>
-                <p class="option-description">Select the predominant soil quality of your reforestation area.</p>
+                <div class="env-factor">
+                    <input type="checkbox" id="use-soil-quality" name="use-soil-quality">
+                    <label for="use-soil-quality">Use Soil Quality</label>
+                    <select id="soil-quality" name="soil-quality" disabled>
+                        <option value="poor">Poor</option>
+                        <option value="medium" selected>Medium</option>
+                        <option value="good">Good</option>
+                    </select>
+                    <p class="option-description">Select the predominant soil quality of your reforestation area.</p>
+                </div>
 
-                <label for="climate-zone">Climate Zone:</label>
-                <select id="climate-zone">
-                    <option value="tropical">Tropical</option>
-                    <option value="dry">Dry</option>
-                    <option value="temperate" selected>Temperate</option>
-                    <option value="continental">Continental</option>
-                    <option value="polar">Polar</option>
-                </select>
-                <p class="option-description">Select the climate zone of your reforestation area.</p>
-                <label for="elevation">Elevation (meters):</label>
-                <input type="number" id="elevation" min="0" step="1" value="0">
-                <p class="option-description">Enter the average elevation of your reforestation area in meters above sea level.</p>
-                <label for="annual-rainfall">Annual Rainfall (mm):</label>
-                <input type="number" id="annual-rainfall" min="0" step="1" value="1000">
-                <p class="option-description">Enter the average annual rainfall of your reforestation area in millimeters.</p>
+                <div class="env-factor">
+                    <input type="checkbox" id="use-climate-zone" name="use-climate-zone">
+                    <label for="use-climate-zone">Use Climate Zone</label>
+                    <select id="climate-zone" name="climate-zone" disabled>
+                        <option value="tropical">Tropical</option>
+                        <option value="dry">Dry</option>
+                        <option value="temperate" selected>Temperate</option>
+                        <option value="continental">Continental</option>
+                        <option value="polar">Polar</option>
+                    </select>
+                    <p class="option-description">Select the climate zone of your reforestation area.</p>
+                </div>
+
+                <div class="env-factor">
+                    <input type="checkbox" id="use-elevation" name="use-elevation">
+                    <label for="use-elevation">Use Elevation (meters)</label>
+                    <input type="number" id="elevation" name="elevation" value="500" min="0" step="1" disabled>
+                    <p class="option-description">Enter the average elevation of your reforestation area in meters above sea level.</p>
+                </div>
+
+                <div class="env-factor">
+                    <input type="checkbox" id="use-annual-rainfall" name="use-annual-rainfall">
+                    <label for="use-annual-rainfall">Use Annual Rainfall (mm)</label>
+                    <input type="number" id="annual-rainfall" name="annual-rainfall" value="800" min="0" step="1" disabled>
+                    <p class="option-description">Enter the average annual rainfall of your reforestation area in millimeters.</p>
+                </div>
             </div>
+        </div>
+        <div class="advanced-option">
+            <label for="debug-mode">Debug Mode:</label>
+            <input type="checkbox" id="debug-mode" name="debug-mode">
         </div>
     </div>
 
