Fix result not showing when warning. Aligned checkbox for debug mode. Add solver choice SLSQP or COBYLA

--- a/index.html
+++ b/index.html
@@ -86,8 +86,10 @@
             </div>
         </div>
         <div class="advanced-option">
-            <label for="debug-mode">Debug Mode:</label>
-            <input type="checkbox" id="debug-mode" name="debug-mode">
+            <div class="debug-mode-container">
+                <label for="debug-mode">Debug Mode:</label>
+                <input type="checkbox" id="debug-mode" name="debug-mode">
+            </div>
         </div>
     </div>
 
