Add home page and support links

--- a/index.html
+++ b/index.html
@@ -148,6 +148,10 @@
             <p>Remember, this is a simplified model. In real-world reforestation projects, many other factors (like soil types, local climate, and ecological interactions) would also need to be considered.</p>
         </div>
     </div>
+    <div style="text-align: center; margin-top: 20px;">
+        <a href="https://bjornkennethholmstrom.wordpress.com/code-mowed/" style="color: #007acc; text-decoration: none; font-size: 0.9em; margin-right: 15px;">🔗 Project Home Page</a>
+        <a href="https://bjornkennethholmstrom.wordpress.com/support/" style="color: #007acc; text-decoration: none; font-size: 0.9em;">🔗 Support</a>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/pyodide/v0.22.1/full/pyodide.js"></script>
     <script src="app.js"></script>
