Create and add all icons. Fix modules. Add more categorization for assets and liabilities

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MOWED</title>
-  </head>
-  <body>
+
+    <!-- Standard favicon -->
+    <link rel="icon" type="image/x-icon" href="/favicon.ico">
+
+    <!-- Alternative favicon formats -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+
+    <!-- Apple Touch Icon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/img/icons/apple-touch-icon.png">
+
+    <!-- Android Chrome Icons -->
+    <link rel="icon" type="image/png" sizes="192x192" href="/img/icons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/img/icons/android-chrome-512x512.png">
+
+    <!-- Microsoft Tile -->
+    <meta name="msapplication-TileColor" content="#4DBA87">
+    <meta name="msapplication-TileImage" content="/img/icons/mstile-150x150.png">
+
+    <!-- Web App Manifest -->
+    <link rel="manifest" href="/manifest.json">
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#4DBA87">
+</head>
+<body>
     <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+    <!-- built files will be auto injected -->
+</body>
 </html>
